--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                     <h4>Follow Us</h4>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/vivek-brahmbhatt-933b70254/"><i class="fab fa-linkedin"></i></a>
-                        <a href=""><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/salubriousearth/status/1933401869084471516"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/p/DK1GK4Czf3A/"><i class="fab fa-instagram"></i></a>
                         <a href="http://www.youtube.com/@vivekbrahmbhatt2823"><i class="fab fa-youtube"></i></a>  
                     </div>
                 </div>
