--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <h4>Contact Us</h4>
                     <p><i class="fas fa-envelope"></i>urukramainnovations@gmail.com </p>
                     <p><i class="fas fa-phone"></i>+91 99784 66048</p>
-                    <p><i class="fas fa-map-marker-alt"></i>Ahmedabad, Gujrat</p>
+                    <p><i class="fas fa-map-marker-alt"></i>Ahmedabad, Gujarat</p>
                 </div>
                 <div class="footer-social">
                     <h4>Follow Us</h4>
