--- a/index.html
+++ b/index.html
@@ -222,7 +222,24 @@
                 </div>
             </div>
         </footer>
-        <!-- <script src="script.js"></script> -->
+        <script>
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+        const navItems = document.querySelectorAll('.nav-links a');
+
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+            hamburger.classList.toggle('toggle');
+        });
+
+        // Close menu on nav link click (for mobile)
+        navItems.forEach(link => {
+            link.addEventListener('click', () => {
+                navLinks.classList.remove('active');
+                hamburger.classList.remove('toggle');
+            });
+        });
+    </script>
 </body>
 
 </html>
