--- a/index.html
+++ b/index.html
@@ -67,162 +67,172 @@
                 <p>Shreds and stores the same amount of leaves using only 25% of the space.</p>
             </div>
         </div>
-        </section>
-        <section class="product-specifications-section">
-            <table class="comparison-table">
-                <caption>Comparison of Leaf Collection Methods</caption>
-                <thead>
-                    <tr>
-                        <th>Feature</th>
-                        <th>Vacuum</th>
-                        <th>Blower</th>
-                        <th>Manual</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Collection</td>
-                        <td>Collection at same time</td>
-                        <td>Gathering first then collection separately</td>
-                        <td>Gathering then collection (slowest)</td>
-                    </tr>
-                    <tr>
-                        <td>Shredding</td>
-                        <td>Shreds leaf (increased storage in image)</td>
-                        <td>Doesn't shred leaves</td>
-                        <td>Doesn't shred leaves</td>
-                    </tr>
-                    <tr>
-                        <td>Collection Team</td>
-                        <td>No need of separate collection team</td>
-                        <td>Need of separate collection team</td>
-                        <td>Need of separate collection team</td>
-                    </tr>
-                    <tr>
-                        <td>Operator</td>
-                        <td>Battery operator friendly, direct suction</td>
-                        <td>Skilled person required to blow leaves</td>
-                        <td>Labour-ground based, manual</td>
-                    </tr>
-                    <tr>
-                        <td>Reach</td>
-                        <td>Reaches hard to reach areas</td>
-                        <td>Doesn't reach hard to reach areas</td>
-                        <td>Doesn't reach hard to reach areas (shrubs, ground)</td>
-                    </tr>
-                </tbody>
-            </table>
+    </section>
+    <section class="product-specifications-section">
+        <table class="comparison-table">
+            <caption>Comparison of Leaf Collection Methods</caption>
+            <thead>
+                <tr>
+                    <th>Feature</th>
+                    <th>Vacuum</th>
+                    <th>Blower</th>
+                    <th>Manual</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Collection</td>
+                    <td>Collection at same time</td>
+                    <td>Gathering first then collection separately</td>
+                    <td>Gathering then collection (slowest)</td>
+                </tr>
+                <tr>
+                    <td>Shredding</td>
+                    <td>Shreds leaf (increased storage in image)</td>
+                    <td>Doesn't shred leaves</td>
+                    <td>Doesn't shred leaves</td>
+                </tr>
+                <tr>
+                    <td>Collection Team</td>
+                    <td>No need of separate collection team</td>
+                    <td>Need of separate collection team</td>
+                    <td>Need of separate collection team</td>
+                </tr>
+                <tr>
+                    <td>Operator</td>
+                    <td>Battery operator friendly, direct suction</td>
+                    <td>Skilled person required to blow leaves</td>
+                    <td>Labour-ground based, manual</td>
+                </tr>
+                <tr>
+                    <td>Reach</td>
+                    <td>Reaches hard to reach areas</td>
+                    <td>Doesn't reach hard to reach areas</td>
+                    <td>Doesn't reach hard to reach areas (shrubs, ground)</td>
+                </tr>
+            </tbody>
+        </table>
 
-            <div class="manual-challenges">
-                <h2>Benefits of Using Vacuum Leaf Collection Methods</h2>
-                <p
-                    style="color: var(--text-accent); font-size: 1.5rem; margin-bottom: 1.5rem; margin-left: 30px; font-family: 'Playfair Display', serif;">
-                    Do you face similar issues?
-                </p>
-                <ul>
-                    <li><strong>Labour Shortage During Holidays:</strong> Festivals like Holi and Diwali make it hard to
-                        find workers, affecting operations.</li>
-                    <li><strong>Idle Workforce:</strong> Labourers often remain unproductive due to lack of motivation
-                        or effective tools.</li>
-                    <li><strong>Need for Constant Oversight:</strong> Manual tasks require supervisors to monitor every
-                        step, wasting valuable time and resources.</li>
-                </ul>
-            </div>
-        </section>
+        <div class="manual-challenges">
+            <h2>Benefits of Using Vacuum Leaf Collection Methods</h2>
+            <p
+                style="color: var(--text-accent); font-size: 1.5rem; margin-bottom: 1.5rem; margin-left: 30px; font-family: 'Playfair Display', serif;">
+                Do you face similar issues?
+            </p>
+            <ul>
+                <li><strong>Labour Shortage During Holidays:</strong> Festivals like Holi and Diwali make it hard to
+                    find workers, affecting operations.</li>
+                <li><strong>Idle Workforce:</strong> Labourers often remain unproductive due to lack of motivation
+                    or effective tools.</li>
+                <li><strong>Need for Constant Oversight:</strong> Manual tasks require supervisors to monitor every
+                    step, wasting valuable time and resources.</li>
+            </ul>
+        </div>
+    </section>
 
-        <section id="demo" class="demo-section">
-            <h2>See It In Action</h2>
-            <div class="video-container">
-                <!-- <video width="700" height="400" controls muted loop style="border-radius: 25px;">
+    <section id="demo" class="demo-section">
+        <h2>See It In Action</h2>
+        <div class="video-container">
+            <!-- <video width="700" height="400" controls muted loop style="border-radius: 25px;">
                     <source src="Images/Product.mov" type="video/mp4">
                 </video> -->
-                <iframe width="740" height="415" src="https://www.youtube.com/embed/TeevH7uE9VM?si=Udwdq3w1tFOKeYDF" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="display: block; margin: 40px auto; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);"></iframe>
-                <p>Watch how our Machine transforms garden maintenance</p>
-            </div>
-        </section>
+                <!-- width="740" height="415" -->
+                <!--  style="display: block; margin: 40px auto; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);" -->
+            <div class="video-wrapper">
+        <iframe src="https://www.youtube.com/embed/TeevH7uE9VM?si=Udwdq3w1tFOKeYDF"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen>
+        </iframe>
+    </div>
+            <p>Watch how our Machine transforms garden maintenance</p>
+        </div>
+    </section>
 
-        <section id="best-feedback" class="best-feedback-section">
-            <h2>What Our Proud Customers Say</h2>
-            <div class="testimonials-container" id="testimonials-container">
-                <div class="testimonial">
-                    <div class="testimonial-rating">
-                        ★★★★★
-                    </div>
-                    <div class="testimonial-text">
-                        "This machine completely changed how we maintain our garden! Efficient, quiet, and easy to use."
-                    </div>
-                    <div class="testimonial-author">
-                        – ITIs Prantij, Delhi
-                    </div>
+    <section id="best-feedback" class="best-feedback-section">
+        <h2>What Our Proud Customers Say</h2>
+        <div class="testimonials-container" id="testimonials-container">
+            <div class="testimonial">
+                <div class="testimonial-rating">
+                    ★★★★★
                 </div>
-
-                <div class="testimonial">
-                    <div class="testimonial-rating">
-                        ★★★★☆
-                    </div>
-                    <div class="testimonial-text">
-                        "Battery life is impressive, and it works well even in tough areas. Very satisfied!"
-                    </div>
-                    <div class="testimonial-author">
-                        – Conmat, Vadodara
-                    </div>
+                <div class="testimonial-text">
+                    "This machine completely changed how we maintain our garden! Efficient, quiet, and easy to use."
+                </div>
+                <div class="testimonial-author">
+                    – ITIs Prantij, Delhi
                 </div>
             </div>
-        </section>
 
-        <section id="about" class="about-section">
-            <h2>About Us</h2>
-            <div class="about-content">
-                <div class="about-image">
-                    <img src="Images/logo.jpg" alt="Our team">
+            <div class="testimonial">
+                <div class="testimonial-rating">
+                    ★★★★☆
                 </div>
-                <div class="about-text">
-                    <p>Salubrious, by Urukrama Innovations Pvt.ltd., was founded by Vivek Brahmbhatt, an award-winning
-                        innovator
-                        recognized at national platforms like IIT Bombay and GTU. We develop low-cost, high-efficiency
-                        leaf
-                        collection machines that reduce manual effort, lower maintenance costs, and promote
-                        afforestation.
-                        Our mission is to make sustainable landscape management accessible and impactful across cities,
-                        campuses, and industries.</p>
+                <div class="testimonial-text">
+                    "Battery life is impressive, and it works well even in tough areas. Very satisfied!"
+                </div>
+                <div class="testimonial-author">
+                    – Conmat, Vadodara
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <footer>
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="Images/logo.jpg">
-                    <h3>Nurturing a greener tomorrow, today</h3>
-                </div>
-                <div class="footer-links">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#product">Product</a></li>
-                        <li><a href="#demo">Demo</a></li>
-                        <li><a href="#best-feedback">Customer-Review</a></li>
-                        <li><a href="#about">About</a></li>
-                    </ul>
-                </div>
-                <div class="footer-contact">
-                    <h4>Contact Us</h4>
-                    <p><i class="fas fa-envelope"></i>urukramainnovations@gmail.com </p>
-                    <p><i class="fas fa-phone"></i>+91 99784 66048</p>
-                    <p><i class="fas fa-map-marker-alt"></i>Ahmedabad, Gujarat</p>
-                </div>
-                <div class="footer-social">
-                    <h4>Follow Us</h4>
-                    <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/vivek-brahmbhatt-933b70254/"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://x.com/salubriousearth/status/1933401869084471516"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/p/DK1GK4Czf3A/"><i class="fab fa-instagram"></i></a>
-                        <a href="http://www.youtube.com/@vivekbrahmbhatt2823"><i class="fab fa-youtube"></i></a>  
-                    </div>
+    <section id="about" class="about-section">
+        <h2>About Us</h2>
+        <div class="about-content">
+            <div class="about-image">
+                <img src="Images/logo.jpg" alt="Our team">
+            </div>
+            <div class="about-text">
+                <p>Salubrious, by Urukrama Innovations Pvt.ltd., was founded by Vivek Brahmbhatt, an award-winning
+                    innovator
+                    recognized at national platforms like IIT Bombay and GTU. We develop low-cost, high-efficiency
+                    leaf
+                    collection machines that reduce manual effort, lower maintenance costs, and promote
+                    afforestation.
+                    Our mission is to make sustainable landscape management accessible and impactful across cities,
+                    campuses, and industries.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="Images/logo.jpg">
+                <h3>Nurturing a greener tomorrow, today</h3>
+            </div>
+            <div class="footer-links">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#product">Product</a></li>
+                    <li><a href="#demo">Demo</a></li>
+                    <li><a href="#best-feedback">Customer-Review</a></li>
+                    <li><a href="#about">About</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h4>Contact Us</h4>
+                <p><i class="fas fa-envelope"></i>urukramainnovations@gmail.com </p>
+                <p><i class="fas fa-phone"></i>+91 99784 66048</p>
+                <p><i class="fas fa-map-marker-alt"></i>Ahmedabad, Gujrat</p>
+            </div>
+            <div class="footer-social">
+                <h4>Follow Us</h4>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/vivek-brahmbhatt-933b70254/"><i
+                            class="fab fa-linkedin"></i></a>
+                    <a href="https://x.com/salubriousearth/status/1933401869084471516"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/p/DK1GK4Czf3A/"><i class="fab fa-instagram"></i></a>
+                    <a href="http://www.youtube.com/@vivekbrahmbhatt2823"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
-        </footer>
-        <script>
+        </div>
+    </footer>
+    <script>
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
         const navItems = document.querySelectorAll('.nav-links a');
