--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="Images/logo.jpg" alt="Leaf Peaking Machine Logo">
+                <img src="Images/logo.jpg" alt="Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="#product">Product</a></li>
