--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <!-- width="740" height="415" -->
             <!--  style="display: block; margin: 40px auto; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);" -->
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/TeevH7uE9VM?si=Udwdq3w1tFOKeYDF" frameborder="0"
+                <iframe src="https://youtu.be/XDbP1F6xIOM?feature=shared" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
@@ -356,3 +356,4 @@
 </body>
 
 </html>
+
