--- a/index.html
+++ b/index.html
@@ -139,10 +139,16 @@
             <!-- width="740" height="415" -->
             <!--  style="display: block; margin: 40px auto; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);" -->
             <div class="video-wrapper">
-                <iframe src="https//youtu.be/XDbP1F6xIOM?si=pceukazba2KHXzgZ"; frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
+               <iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/XDbP1F6xIOM"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen>
+</iframe>
             </div>
             <p>Watch how our Machine transforms garden maintenance</p>
         </div>
@@ -356,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
