--- a/index.html
+++ b/index.html
@@ -139,16 +139,10 @@
             <!-- width="740" height="415" -->
             <!--  style="display: block; margin: 40px auto; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);" -->
             <div class="video-wrapper">
-               <iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed/XDbP1F6xIOM"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerpolicy="strict-origin-when-cross-origin"
-  allowfullscreen>
-</iframe>
+      <iframe src="https://youtube.com/embed/XDbP1F6xIOM" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
             <p>Watch how our Machine transforms garden maintenance</p>
         </div>
@@ -362,6 +356,7 @@
 </body>
 
 </html>
+
 
 
 
