--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </nav>
         <div class="hero">
             <div class="hero-content">
-                <h1 class="animate-text">Revolutionize Your landscape Maintenance Agency</h1>
-                <p class="animate-text delay-1">The most efficient leaf collection solution for modern gardens</p>
+                <h1 class="animate-text">For Landscape Maintenance Agencies With 10+ Workers, We Increase Your Profit by 30% in 15 Days — Or You Pay ₹0</h1>
+                <p class="animate-text delay-1">15-Day Performance Pilot | You Only Pay If It Saves You Money</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqgSg7xetp-mnraRPZtJLKysJu2bJOkH2Yl0NmN0wqh3jgJA/viewform?usp=dialog"
                     class="cta-button animate-text delay-2">Get Yours Today</a>
             </div>
@@ -139,7 +139,7 @@
             <!-- width="740" height="415" -->
             <!--  style="display: block; margin: 40px auto; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);" -->
             <div class="video-wrapper">
-      <iframe src="https://youtube.com/embed/DaWv7xPI" frameborder="0"
+      <iframe src="https://youtube.com/embed/-L-DaWv7xPI" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
@@ -356,6 +356,7 @@
 </body>
 
 </html>
+
 
 
 
