--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaf Picking Machine - Garden Innovation</title>
+    <title>Landscape Maintenance - Garden Innovation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -35,7 +35,7 @@
         </nav>
         <div class="hero">
             <div class="hero-content">
-                <h1 class="animate-text">For Landscape Maintenance Agencies With 10+ Workers, We Increase Your Profit by 30% in 15 Days — Or You Pay ₹0</h1>
+                <h1 class="animate-text">30% More Profit in 15 Days — Or You Pay Nothing</h1>
                 <p class="animate-text delay-1">15-Day Performance Pilot | You Only Pay If It Saves You Money</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqgSg7xetp-mnraRPZtJLKysJu2bJOkH2Yl0NmN0wqh3jgJA/viewform?usp=dialog"
                     class="cta-button animate-text delay-2">Get Yours Today</a>
@@ -44,17 +44,15 @@
     </header>
 
     <section id="product" class="product-section">
-        <h2>Product Features</h2>
+        <h2>Benefits</h2>
         <div class="features-container">
             <div class="feature">
                 <i class="fas fa-seedling"></i>
-                <h3>Access to Hard-to-Reach Areas</h3>
-                <p>Able to reach areas like mehndi shrubs and thorny spots with ease.</p>
+                <h3>Increase contract profit margins</h3>
             </div>
             <div class="feature">
                 <i class="fas fa-battery-full"></i>
-                <h3>Battery Based</h3>
-                <p>Runs on battery – cordless and clean energy powered operation.</p>
+                <h3>Run a full day without worrying about charging, breakdowns, or downtime</h3>
             </div>
             <div class="feature">
                 <i class="fas fa-stopwatch"></i>
@@ -63,8 +61,7 @@
             </div>
             <div class="feature">
                 <i class="fas fa-archive"></i>
-                <h3>Space-Saving Shredder</h3>
-                <p>Shreds and stores the same amount of leaves using only 25% of the space.</p>
+                <h3>Reduce worker fatigue and absenteeism while getting more output per person</h3>
             </div>
         </div>
     </section>
@@ -356,6 +353,7 @@
 </body>
 
 </html>
+
 
 
 
