--- a/index.html
+++ b/index.html
@@ -65,50 +65,32 @@
             </div>
         </div>
     </section>
-    <section class="product-specifications-section">
-        <table class="comparison-table">
-            <caption>Comparison of Leaf Collection Methods</caption>
-            <thead>
-                <tr>
-                    <th>Feature</th>
-                    <th>Vacuum</th>
-                    <th>Blower</th>
-                    <th>Manual</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Collection</td>
-                    <td>Collection at same time</td>
-                    <td>Gathering first then collection separately</td>
-                    <td>Gathering then collection (slowest)</td>
-                </tr>
-                <tr>
-                    <td>Shredding</td>
-                    <td>Shreds leaf (increased storage in image)</td>
-                    <td>Doesn't shred leaves</td>
-                    <td>Doesn't shred leaves</td>
-                </tr>
-                <tr>
-                    <td>Collection Team</td>
-                    <td>No need of separate collection team</td>
-                    <td>Need of separate collection team</td>
-                    <td>Need of separate collection team</td>
-                </tr>
-                <tr>
-                    <td>Operator</td>
-                    <td>Battery operator friendly, direct suction</td>
-                    <td>Skilled person required to blow leaves</td>
-                    <td>Labour-ground based, manual</td>
-                </tr>
-                <tr>
-                    <td>Reach</td>
-                    <td>Reaches hard to reach areas</td>
-                    <td>Doesn't reach hard to reach areas</td>
-                    <td>Doesn't reach hard to reach areas (shrubs, ground)</td>
-                </tr>
-            </tbody>
-        </table>
+ <section class="pilot-process">
+  <h2>How Our 15-Day Performance Pilot Works</h2>
+  <div class="pilot-steps">
+
+    <div class="pilot-step">
+      <h3>Step 1 — Free Site Assessment</h3>
+      <p>We visit your site and study your current cleaning process, manpower usage, time spent, and cost baseline.</p>
+    </div>
+
+    <div class="pilot-step">
+      <h3>Step 2 — Machine Deployment</h3>
+      <p>We install the machine on your site and train your staff for smooth daily operation without disrupting work.</p>
+    </div>
+
+    <div class="pilot-step">
+      <h3>Step 3 — Live Performance Tracking</h3>
+      <p>For 15 days, we track cleaning speed, labour hours saved, area coverage, and real operational cost reduction.</p>
+    </div>
+
+    <div class="pilot-step">
+      <h3>Step 4 — Savings Report & Decision</h3>
+      <p>If savings are achieved, you keep 70% and we take only 30%. If no savings are delivered, you pay ₹0.</p>
+    </div>
+
+  </div>
+</section>
 
         <div class="manual-challenges">
             <h2>Benefits of Using Vacuum Leaf Collection Methods</h2>
@@ -353,6 +335,7 @@
 </body>
 
 </html>
+
 
 
 
